# sm-arp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  THREATMODEL.md  WHITEPAPER.md  pyproject.toml
.github/workflows/: conformance.yml  release.yml
arp_cli/: __init__.py  cli.py  corpus.py  issue.py  narrate.py  render.py
conformance/: _badge_vector_gen.py  badge.py  test_badge.py  test_badge_vectors.py  vectors_loader.py  verify_badge.py
conformance/arp/: __init__.py  _vector_gen.py  badge.py  test_arp_v01.py  test_badge.py
examples/: README.md  full_set_demo.py
nanda/: README.md  README_NANDA.md  nanda_interaction_trace.json  nanda_trace_demo.py  requirements.txt
nanda/_arp_v01/: __init__.py
nanda/_arp_v01/schemas/: accessibility.schema.json  action.schema.json  jurisdiction.schema.json
schema/arp/0.1/: accessibility.schema.json  action.schema.json  common.schema.json  conformance-envelope.schema.json  evidence.schema.json  jurisdiction.schema.json  receipt.schema.json
sm_arp/: __init__.py  receipts.py  store.py  vrp.py
sm_arp/tests/: test_attestation.py  test_cosign.py  test_lib.py  test_scoring.py  test_vrp.py
spec/arp/0.1/: CHANGELOG.md  README.md  conformance.md  dat-companion.md  governance.md  spec.md
tests/: test_dat_bridge.py
tests/cli/: conftest.py  test_cli_e2e.py  test_cli_read.py  test_cli_write.py
vectors/arp/0.1/: 01-basic-purchase.json  02-purchase-full.json  03-message-sent.json  04-data-shared-gdpr.json  05-attestation-issued.json  06-vote-cast.json  07-decision-made.json  08-record-filed.json  09-appointment-booked.json  10-reversal.json  11-chain-genesis.json  12-chain-linked.json  13-multilang-summary.json  14-requires-review.json  15-with-tool-invocations.json  16-invalid-signature.json  17-wrong-version.json  18-oversized-summary.json  19-broken-hash-chain.json  20-invalid-did.json  21-unknown-extension.json  22-unknown-category-tolerant.json
