[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sm-arp"
version = "0.1.3"
description = "Agency Receipt Protocol — receipt envelope spec + language-agnostic conformance harness. Points at sm-conformance for the signed badge."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{ name = "stellarminds.ai" }]
keywords = ["arp", "agency-receipt", "accountability", "ed25519", "did-key", "agents", "receipts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
# Core = exactly what the `sm_arp` library imports to build / sign / verify /
# store a receipt. A consumer that imports `sm_arp` inherits only these three —
# no test runner, no schema validator. Conformance and CLI deps are extras.
dependencies = [
    "cryptography>=42",
    "base58>=2.1",
    "jcs>=0.2",
]

[project.optional-dependencies]
# Producing/verifying the ARP conformance badge. jsonschema/referencing back the
# JSON-Schema validation in `conformance/`; sm-conformance supplies the signed
# badge primitive. None of this is needed to build or verify a receipt.
conformance = [
    "jsonschema>=4.21",
    "referencing>=0.30",
    "sm-conformance>=0.3.1",
]
# Command-line tool — `pip install sm-arp[cli]` exposes the `arp` entry point.
cli = [
    "typer>=0.12",
]
# Everything needed to run the full test suite (lib + conformance + cli).
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
arp = "arp_cli.cli:main"

[project.urls]
Homepage = "https://labs.stellarminds.ai/arp"
Repository = "https://github.com/Sharathvc23/sm-arp"

[tool.setuptools.packages.find]
where = ["."]
include = ["sm_arp*", "conformance*", "arp_cli*"]

[tool.pytest.ini_options]
testpaths = ["sm_arp", "conformance", "tests"]
