[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sm-arp"
version = "0.2.3"
description = "Agency Receipt Protocol — receipt envelope spec + language-agnostic conformance harness. Points at sm-conformance for the signed badge."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{ name = "stellarminds.ai" }]
keywords = ["arp", "agency-receipt", "accountability", "ed25519", "did-key", "agents", "receipts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
# Core = exactly what the `sm_arp` library imports to build / sign / verify /
# store a receipt. A consumer that imports `sm_arp` inherits only these three —
# no test runner, no schema validator. Conformance and CLI deps are extras.
dependencies = [
    "cryptography>=42",
    "base58>=2.1",
    "jcs>=0.2",
]

[project.optional-dependencies]
# Producing/verifying the ARP conformance badge. jsonschema/referencing back the
# JSON-Schema validation in `conformance/`; sm-conformance supplies the signed
# badge primitive. None of this is needed to build or verify a receipt.
conformance = [
    "jsonschema>=4.21",
    "referencing>=0.30",
    "sm-conformance>=0.3.1",
]
# Command-line tool (`arp_cli`) — a repo/dev tool, run from a checkout via
# `python -m arp_cli.cli`. Not shipped in the wheel (it depends on the conformance
# harness, which the wheel intentionally excludes).
cli = [
    "typer>=0.12",
]
# Everything needed to run the full test suite (lib + conformance + cli) plus
# the lint/type gates (ruff + mypy) that CI enforces.
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://labs.stellarminds.ai/arp"
Repository = "https://github.com/Sharathvc23/sm-arp"

# The published wheel ships ONLY the consumable library (`sm_arp`). The conformance
# harness (`conformance/`), CLI (`arp_cli/`), schemas, and vectors are repo/dev tools —
# shipping them as top-level `conformance` / `arp_cli` packages polluted consumers'
# namespaces (a top-level `conformance` shadowed downstreams' own). `pip install -e .`
# for development still exposes everything; only the built wheel is scoped down.
[tool.setuptools.packages.find]
where = ["."]
include = ["sm_arp*"]
# Tests are dev-only; keep them out of the consumable wheel (they still run from
# the source tree / editable install in CI).
exclude = ["sm_arp.tests*"]

# Ship the PEP 561 `py.typed` marker so downstream consumers see `sm_arp`'s
# inline type hints (without it, mypy treats the installed package as untyped).
[tool.setuptools.package-data]
sm_arp = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["sm_arp", "conformance", "tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# E/F = pycodestyle+pyflakes core, I = import sorting, UP = pyupgrade,
# B = bugbear, SIM = simplify, C4 = comprehensions, RUF = ruff-native.
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Typer uses `param: T = typer.Option(...)` / `typer.Argument(...)` as the
# canonical way to declare CLI parameters; B008 (function-call-in-default)
# is a false positive for that idiom. Scoped to the CLI so B008 still guards
# genuine mutable-default bugs everywhere else.
"arp_cli/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["sm_arp"]

[[tool.mypy.overrides]]
# `jcs` (JSON Canonicalization Scheme) ships no type stubs / py.typed marker;
# ignore the missing-import error for this third-party dep only.
module = "jcs.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# `conformance` is a repo/dev harness, not the shipped library; it is out of
# the strict-typing scope (the published wheel excludes it). One test in
# `sm_arp.tests` imports it deliberately, which makes mypy follow it — relax
# errors there so the gate stays focused on the consumable `sm_arp` package.
module = "conformance.*"
ignore_errors = true
